# Hashbrown

./: CMakeLists.txt  README.md
include/hashbrown/display/: buffer.h  display.h
include/hashbrown/music/: \  channel.h  configuration.h  envelope.h  envelope_generator.h  module.h  pattern.h  playback.h  player.h  row.h
include/hashbrown/sound/: config.h  modulator.h  noise.h  operator.h  oscillator.h  sine.h  soundchip.h
src/: config.h  modulator.c  operator.c  oscillator.c  soundchip.c  synth.h  util.h
src/display/: buffer.c  display.c
src/music/: channel.c  configuration.c  envelope.c  envelope_generator.c  module.c  pattern.c  player.c  row.c
src/sound/: modulator.c  noise.c  operator.c  oscillator.c  sine.c  soundchip.c  synth.c
src/tests/: display.c  music.c  raster.c  soundchip.c  synth.c
src/tracker/: color.c  color.h  interface.c  interface.h  main.c  region.c  region.h  theme.c  theme.h  util.c  util.h  vector.c  vector.h
src/tracker/ui/: box.c  box.h  box_style.c  box_style.h  container.c  container.h  dummy.c  dummy.h  element.c  element.h  event.c  event.h  layout.c  layout.h  layout_split.c  layout_split.h  text.c  text.h
tests/: audio.c  audio.h  soundchip.c  synth.c  util.h
tools/: sine_table_gen.py
